[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/splash/card1.png" type="Texture" id=1]
[ext_resource path="res://Entities/Player/fader.gd" type="Script" id=2]
[ext_resource path="res://Scenes/splash.gd" type="Script" id=3]
[ext_resource path="res://Sprites/splash/card_blank.png" type="Texture" id=4]
[ext_resource path="res://Sprites/splash/card2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/splash/card_gremlin.png" type="Texture" id=6]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float alpha;

void fragment() {
    vec4 texture_color = texture(TEXTURE, UV);
    COLOR = vec4(texture_color.r, texture_color.g, texture_color.b, alpha);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/alpha = null

[node name="splash" type="Node2D"]
script = ExtResource( 3 )

[node name="Card1" type="Sprite" parent="."]
material = SubResource( 5 )
position = Vector2( 960, 540 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Card2" type="Sprite" parent="."]
material = SubResource( 5 )
position = Vector2( 960, 540 )
texture = ExtResource( 6 )
script = ExtResource( 2 )

[node name="Card3" type="Sprite" parent="."]
material = SubResource( 5 )
position = Vector2( 960, 540 )
texture = ExtResource( 5 )
script = ExtResource( 2 )

[node name="Card4" type="Sprite" parent="."]
material = SubResource( 5 )
position = Vector2( 960, 540 )
texture = ExtResource( 4 )
script = ExtResource( 2 )
